# Mu-P_Mapping

./: .gitignore  .~lock.Untitled 1.ods#  CMakeLists.txt  Makefile  Mu-P_Mapping.cbp  README.md  Untitled 1.ods  calc.c  fugacity  fugacity.c  fugacity.h  graphout.py  main.c  makefile  run_me_first.sh  submit.sh
compressibility/: .gitignore  .test.cpp.swp  CMakeLists.txt  Cluster_Scrape.sh  Data_Analysis.sh  Peng_robinson.cpp  Presentation.key  Reference_Data.cpp  Run_Tests.sh  calculations.cpp  calculations.h  compressibility.h  compressiblity.cpp  data_handling.cpp  data_scrape_and_analysis.sh  doit.sh  get_cluster_data.sh  graph_H2He.py  graph_H2He_compressibilities.py  graph_most.py  graph_most_compressibilities.py  graphout.py  install_dependencies.sh  io.cpp  isobar_scrape_NIST.sh  isotherm_scrape_NIST.sh  kickoff_jobs.sh  main.cpp  make_all_dirs.sh  peng_robinson.cpp  restart_all_jobs.sh  restart_jobs.sh  scrape.sh  scrape_NIST.sh  scrape_NIST_for_isotherms.sh  state_functions.cpp  submit.sh  tables.py  test.cpp  test.sh  (+1 more)
compressibility/ISOBAR/: AR0.1  AR1.0  AR10.0  AR20.0  AR30.0  AR5.0  CH40.1  CH41.0  CH410.0  CH420.0  CH430.0  CH45.0  CO20.1  CO21.0  CO210.0  CO220.0  CO230.0  CO25.0  H20.1  H21.0  H210.0  H220.0  H230.0  H25.0  HE1.0  KR0.1  KR1.0  KR10.0  KR20.0  KR30.0  KR5.0  N210.0  N220.0  N25.0  NE0.1  NE1.0  NE10.0  NE20.0  NE30.0  NE5.0  (+6 more)
compressibility/ISOTHERMS/: AR120  AR150  AR180  AR210  AR240  AR270  AR300  AR330  AR360  AR390  AR90  CH4115  CH4145  CH4175  CH4205  CH4235  CH4265  CH4295  CH4325  CH4355  CH4385  CH4415  CO2235  CO2255  CO2275  CO2295  CO2315  CO2335  CO2355  CO2375  CO2395  H2100  H2140  H2180  H220  H2220  H2260  H2300  H2340  H2380  (+57 more)
compressibility/TESTS/: results1
compressibility/co2/: graphout.py
compressibility/data/: AR00.1  AR001  AR005  AR010  AR020  AR030  CH400.1  CH4001  CH4005  CH4010  CH4020  CH4030  CO200.1  CO2001  CO2005  CO2010  CO2020  CO2030  H200.1  H2001  H2005  H2010  H2020  H2030  HE00.1  HE001  HE005  HE010  HE020  HE030  KR00.1  KR001  KR005  KR010  KR020  KR030  N200.1  N2001  N2005  N2010  (+14 more)
compressibility/h2/: graphout.py
compressibility/inputfiles/: nptARinput.inp  nptCH4input.inp  nptH2FH_OFFinput.inp  nptH2FH_ONinput.inp  nptHEFH_ONinput.inp  nptinput.inp
compressibility/modelfiles/: .CH4_9_site_nonpolar.pqr.swp  h2bss.pqr  pdb_extender  pdb_extender.c
compressibility/n2/: graphout.py
fugacity/: calc.c  (+5 more)
(+463 files in other folders)
